--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-2.99MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-515.3KB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-725.7KB/s(Youtube:不良林), server: 103.172.116.9, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇰🇷 韩国-1.91MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.93MB/s(Youtube:不良林), server: umhn5r.zhs.company, port: 30008, type: vmess, uuid: 236ca3b1-897e-32b0-8c94-c5284d3bfd9b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: umhn5r.zhs.company}}
-  - {name: 🇺🇸 美国-4.56MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇸🇬 新加坡-840.9KB/s(Youtube:不良林), server: 103.172.116.9, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇸🇬 新加坡-702.6KB/s(Youtube:不良林), server: 103.172.116.9, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇨🇳 中国-343.3KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1580, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇺🇸 美国-379.1KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林), server: 103.172.116.9, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇸🇬 新加坡-1.30MB/s(Youtube:不良林), server: 103.172.116.9, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇮🇳 印度-275.1KB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇨🇳 中国-422.8KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1510, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇨🇳 中国-697.5KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1980, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇸🇬 新加坡-668.0KB/s(Youtube:不良林), server: 103.172.116.9, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇸🇬 新加坡-2.78MB/s(Youtube:不良林), server: 139.99.123.156, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-481.7KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-515.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-725.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-840.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-702.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-515.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-725.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-840.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-702.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-515.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-725.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-840.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-702.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-515.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-725.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-840.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-702.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-515.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-725.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-840.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-702.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-515.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-725.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-840.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-702.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-515.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-725.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-840.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-702.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
