--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-343.3KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1580, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇺🇸 美国-379.1KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林), server: 103.172.116.9, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇸🇬 新加坡-1.30MB/s(Youtube:不良林), server: 103.172.116.9, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇮🇳 印度-275.1KB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
   - {name: 🇨🇳 中国-422.8KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1510, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇨🇳 中国-697.5KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1980, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.31MB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇨🇳 中国-3.24MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 30122, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇺🇸 美国-209.1KB/s(Youtube:不良林), server: 43.200.6.24, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇸🇬 新加坡-668.0KB/s(Youtube:不良林), server: 103.172.116.9, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
   - {name: 🇸🇬 新加坡-2.78MB/s(Youtube:不良林), server: 139.99.123.156, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-481.7KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
+  - {name: 🇮🇳 印度-2.37MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-988.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-275.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-668.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
