--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
-  - {name: 乌克兰-1011.1KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇳 中国-439.7KB/s(Youtube:不良林), server: lv2.sdwan.myasns.com, port: 7303, type: vmess, uuid: f12c8555-ba7f-493f-8b44-32ed67d51f1a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.15MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
-  - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 波兰-630.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.37MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 45782, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
   - {name: 波兰-697.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 波兰-690.1KB/s(Youtube:不良林), server: 217.30.10.64, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
   - {name: 波兰-541.3KB/s(Youtube:不良林), server: 217.30.10.64, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
   - {name: 波兰-662.3KB/s(Youtube:不良林), server: 217.30.10.64, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
   - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.47MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45785, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 116.129.254.78, port: 63051, type: vmess, uuid: ba22a02b-4178-39a7-b748-4d0c03b9a674, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls, ws-headers: {Host: 116.129.254.78}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 乌克兰-1011.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 波兰-630.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
       - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-690.1KB/s(Youtube:不良林)
       - 波兰-541.3KB/s(Youtube:不良林)
       - 波兰-662.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 乌克兰-1011.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 波兰-630.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
       - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-690.1KB/s(Youtube:不良林)
       - 波兰-541.3KB/s(Youtube:不良林)
       - 波兰-662.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 乌克兰-1011.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 波兰-630.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
       - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-690.1KB/s(Youtube:不良林)
       - 波兰-541.3KB/s(Youtube:不良林)
       - 波兰-662.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 乌克兰-1011.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 波兰-630.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
       - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-690.1KB/s(Youtube:不良林)
       - 波兰-541.3KB/s(Youtube:不良林)
       - 波兰-662.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 乌克兰-1011.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 波兰-630.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
       - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-690.1KB/s(Youtube:不良林)
       - 波兰-541.3KB/s(Youtube:不良林)
       - 波兰-662.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 乌克兰-1011.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 波兰-630.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
       - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-690.1KB/s(Youtube:不良林)
       - 波兰-541.3KB/s(Youtube:不良林)
       - 波兰-662.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 乌克兰-1011.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 波兰-630.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
       - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-690.1KB/s(Youtube:不良林)
       - 波兰-541.3KB/s(Youtube:不良林)
       - 波兰-662.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
