--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 波兰-630.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.37MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 45782, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
-  - {name: 波兰-697.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 波兰-541.3KB/s(Youtube:不良林), server: 217.30.10.64, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 波兰-662.3KB/s(Youtube:不良林), server: 217.30.10.64, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.47MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45785, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 116.129.254.78, port: 63051, type: vmess, uuid: ba22a02b-4178-39a7-b748-4d0c03b9a674, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls, ws-headers: {Host: 116.129.254.78}}
+  - {name: 🇨🇳 中国-364.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林), server: 134.195.196.150, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇮🇳 印度-3.05MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-161.8KB/s(Youtube:不良林), server: 103.172.116.9, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-547.2KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
+  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-876.4KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1510, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇨🇳 中国-1014.0KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1370, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
-      - 波兰-630.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-541.3KB/s(Youtube:不良林)
-      - 波兰-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
-      - 波兰-630.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-541.3KB/s(Youtube:不良林)
-      - 波兰-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
-      - 波兰-630.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-541.3KB/s(Youtube:不良林)
-      - 波兰-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
-      - 波兰-630.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-541.3KB/s(Youtube:不良林)
-      - 波兰-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
-      - 波兰-630.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-541.3KB/s(Youtube:不良林)
-      - 波兰-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
-      - 波兰-630.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-541.3KB/s(Youtube:不良林)
-      - 波兰-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
-      - 波兰-630.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 波兰-697.6KB/s(Youtube:不良林)
-      - 波兰-541.3KB/s(Youtube:不良林)
-      - 波兰-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
