--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,31 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-226.6KB/s(Youtube:不良林), server: 52.140.223.72, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 🇺🇸 美国-3.50MB/s(Youtube:不良林), server: c11s3.jamjams.net, port: 17938, type: vmess, uuid: e8d5a966-8093-4d4e-8977-0baca9c8ab55, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-273.5KB/s(Youtube:不良林), server: 213.183.53.198, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-4.47MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.31MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林), server: 213.183.53.179, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +40,23 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +72,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
